--- a/install.html
+++ b/install.html
@@ -6,29 +6,81 @@
     <title>Becker Boutique Installer</title>
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/css/reveal.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/css/theme/moon.min.css">
+    <style>
+:root {
+    --background-color: none;
+}
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
+.splash-screen {
+    position: fixed;
+    z-index: 9999999999;
+    top: -100px;
+    width: calc(100%);
+    height: calc(100% + 200px);
+    background-color: var(--background-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.splash-screen .content img {
+    z-index: 2;
+    width: 240px;
+    height: auto;
+    border-radius: 50px;
+    box-shadow: 0 2px 30px -10px rgb(0 0 0 / 10%);
+    transform: translateY(30px);
+}
+.splash-screen .content {
+    z-index: 1;
+    color: white;
+    position: absolute;
+    width: 100%;
+    font-size: 30px;
+    text-align: center;
+    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.2));
+}
+    </style>
 </head>
 <body>
-    <div class="reveal">
-        <div class="slides">
-
-            <section>
-                <h2>Becker Boutique</h2>
-                <br><br>
-                <h4>Click the 3 dots at the top right corner,<br>then click Install App!</h4>
-                
-            </section>
-
+    <div class="splash-screen">
+        <div class="content">
+            <img id="logoImg" src="" alt="">
+            <h4 id="appName"></h4>
+            <div style="font-size: 27px;">
+                Click the 3 dots at the top right corner,
+                <br>
+                <div style="margin-top: 10px;" id="installInsctructions"></div>
+            </div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/js/reveal.min.js"></script>
     <script>
-Reveal.initialize({
-    controlsLayout: 'edges',
-    width: 740,
-    height: 1480,
-});
+function isPwa() {
+    return ["fullscreen", "standalone", "minimal-ui"].some(
+        (displayMode) => window.matchMedia('(display-mode: ' + displayMode + ')').matches
+    );
+}
+if (isPwa()) {
+    location.href = "index.html";
+}
+function _(x) { return document.getElementById(x); }
+async function autoFill() {
+    let res = await fetch( document.querySelector('link[rel=manifest]').getAttribute('href') );
+    let manifest = await res.json();
+
+    _('appName').innerHTML = manifest.name;
+    if (manifest.display === 'standalone') {
+        _('installInsctructions').innerHTML = 'Then click Install App!';
+    } else {
+        _('installInsctructions').innerHTML = 'Then click Add to Home Screen!';
+    }
+    document.documentElement.style.setProperty('--background-color', manifest.background_color);
+    _('logoImg').src = manifest.icons[0].src;
+}
+autoFill();
     </script>
 </body>
 </html>
