added theme color and updated referral suite install link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ if (!firstTime) {
         <h1 class="app-title">Becker Boutique</h1>
     </center>
     <div class="app-drawer">
-        <div class="app-icon" href="../referral-suite/install/installApp.html">
+        <div class="app-icon" href="../referral-suite/install.html">
             <img src="../referral-suite/logo.png">
             <name>Referral Suite</name>
             <desc>A clean tool for managing mission media referrals in teams.</desc>
