--- a/install.html
+++ b/install.html
@@ -6,6 +6,7 @@
     <title>Becker Boutique Installer</title>
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.webmanifest">
+    <meta name="theme-color" content="default">
     <style>
 :root {
     --background-color: none;
@@ -77,7 +78,8 @@ async function autoFill() {
     } else {
         _('installInsctructions').innerHTML = 'Then click Add to Home Screen!';
     }
-    document.documentElement.style.setProperty('--background-color', manifest.background_color);
+    document.querySelector('meta[name=theme-color]').content = manifest.theme_color || 'default';
+    document.documentElement.style.setProperty('--background-color', manifest.background_color || 'gray');
     _('logoImg').src = manifest.icons[0].src;
 }
 autoFill();
