updated beckerbeats link

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ if (!firstTime) {
             <name>Instrument Tuner</name>
             <desc>Ever needed to tune an instrument and don't want to buy a tuner? Turn your phone into a tuner with this app!</desc>
         </div>
-        <div class="app-icon" href="../beckerbeats/install.html">
-            <img src="../beckerbeats/assets/img/beckerBeatsLogo.jpg">
+        <div class="app-icon" href="../beckerbeats-beta/install.html">
+            <img src="../beckerbeats-beta/assets/img/beckerBeatsLogo.jpg">
             <name>Becker Beats</name>
             <desc>An app for studying. Here you can find the Mormons Bok audiobook in Swedish, study music and sounds, and the Saints Radio made by the church.</desc>
         </div>
