added Nearby Share

--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@ if (!firstTime) {
             <name>Saints Radio</name>
             <desc>Want to listen to Saints Radio developed by the church? This is the right app for you!<br>This radio is also included as part of the Becker Beats app. This Saints Radio app is ony Saints Radio and nothing else.</desc>
         </div>
+        <div class="app-icon" href="../file-transferer/install.html">
+            <img src="../file-transferer/logo.png">
+            <name>Nearby Share</name>
+            <desc>Missing <i>Nearby Share</i> which our phones used to have? Use this instead!</desc>
+        </div>
         <div class="app-icon" href="#">
             <img src="">
             <name>Conf Reports</name>
             <desc>Want to dive deeper into the Book of Mormon and General Conference? Conf Reports provides tools allowing you to analyse these texts deeper and find what you need faster!</desc>
-        </div>
-        <div class="app-icon" href="">
-            <img src="">
-            <name>Quick Share</name>
-        	<desc>Missing <i>Nearby Share</i> which our phones used to have? Use this instead! Just as fast and doesn't even need to be nearby.</desc>
         </div>
         <!-- <div class="app-icon" href="../mission-streamer/install.html">
             <img src="">
