added coming soon image

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ if (!firstTime) {
             <name>Nearby Share</name>
             <desc>Missing <i>Nearby Share</i> which our phones used to have? Use this instead!</desc>
         </div>
-        <div class="app-icon" href="#">
-            <img src="">
+        <div class="app-icon" href="">
+            <img src="COMING_SOON.png">
             <name>Conf Reports</name>
             <desc>Want to dive deeper into the Book of Mormon and General Conference? Conf Reports provides tools allowing you to analyse these texts deeper and find what you need faster!</desc>
         </div>
