--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ if (!firstTime) {
     document.write(`
         <div class="splash-screen">
         <credit id="dev-er"><span style="font-size:20px">Developed By:</span><br>Michael Becker</credit>
-        <img src="logo.png" alt="App Icon">
+        <img src="logo-elephant.png" alt="App Icon">
         </div>
     `);
 }
