--- a/install.html
+++ b/install.html
@@ -86,5 +86,16 @@ async function autoFill() {
 }
 autoFill();
     </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-230VQ7TS4X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-230VQ7TS4X');
+</script>
+
 </body>
 </html>
