--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Becker Boutique</title>
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="shortcut icon" href="logo.png" type="image/png">
+    <meta name="theme-color" content="#ff9100">
     <link rel="stylesheet" href="styles.css">
     <script src="jsalert.js"></script>
     <style>
